# bibliophile

./: .gitignore  .prettierignore  .pylintrc  .travis.yml  Makefile  README.md  lambda.py  lookup.py  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-top-level.txt  requirements.txt  serverless.yml
.github/workflows/: ci.yml
bibliophile/: __init__.py  bibliocommons.py  goodreads.py  syndetics.py
bibliophile/tests/: test_goodreads.py  test_syndetics.py
lambda_functions/: read_shelf.py  search_catalog.py
lambda_functions/tests/: conftest.py  read_shelf_test.py  search_catalog_test.py
react-frontend/: README.md  package-lock.json  package.json
react-frontend/public/: index.html  manifest.json
react-frontend/src/: App.js  BookList.js  LookupForm.js  bibliocommons.js  index.css
web_interface/: book-list.html  index.html
